鱼皮第 4 次直播结束：系统优化（文件安全、分表存储、限流）

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,12 +23,11 @@ spring:
     password: 123456
   # Redis 配置
   # todo 需替换配置，然后取消注释
-#  redis:
-#    database: 1
-#    host: localhost
-#    port: 6379
-#    timeout: 5000
-#    password: 123456
+  redis:
+    database: 1
+    host: localhost
+    port: 6379
+    timeout: 5000
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
 #  elasticsearch:
@@ -90,5 +89,5 @@ cos:
 # 鱼聪明 AI 配置（https://yucongming.com/）
 yuapi:
   client:
-    access-key: 替换为你自己的 access-key
-    secret-key: 替换为你自己的 secret-key
+    access-key: tjk3ppclfgngl8zqqtl08pf9ksw9jxxs
+    secret-key: us733h3jnm9d60f0nqjx67ilwwsfaie9
