--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,15 +7,16 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/my_db
     username: root
-    password: 123456
+    password: root
   # Redis 配置
   # todo 需替换配置
   redis:
     database: 1
     host: localhost
+#    host: 192.168.88.130
     port: 6379
     timeout: 5000
-    password: 123456
+    password: 123321
   # Elasticsearch 配置
   # todo 需替换配置
   elasticsearch:
